--- a/recovery/root/ueventd.qcom.rc
+++ b/recovery/root/ueventd.qcom.rc
@@ -1,4 +1,4 @@
-# Copyright (c) 2012-2015, 2017-2019, The Linux Foundation. All rights reserved.
+# Copyright (c) 2012-2015, 2017-2018, The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -55,8 +55,6 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/dpl_ctrl             0660   usb        usb
 /dev/ipa_odl_ctl          0660   radio      radio
 /dev/ipa_adpl             0660   system     oem_2905
-/dev/hab                  0666   system     system
-/dev/synx_device          0660   root       camera
 
 #permissions for CSVT
 /dev/smd11                0660   radio      radio
@@ -161,7 +159,6 @@ firmware_directories /vendor/firmware_mnt/image/
 /sys/devices/soc/a000000.qcom,wcnss-wlan/net/wlan0/queues/rx-* rps_cpus           0660   system     system
 /sys/devices/soc/a000000.qcom,wcnss-wlan/net/p2p0/queues/rx-* rps_cpus            0660   system     system
 /dev/spidev0.0            0660   system     audio
-/dev/i2c-7                0660   system     audio
 /dev/msm_camera/*         0660   system     camera
 /dev/gemini/              0660   system     camera
 /dev/mercury0             0660   system     camera
@@ -206,14 +203,14 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/msm_voicememo        0660   system     audio
 /dev/ttyHSL1              0660   system     system
 #ifndef VENDOR_EDIT
-#//Jianfeng.Qiu@PSW.MM.AudioDriver.Codec.1263116, 2018/05/15, Modify for smart mic
+#//Wang.kun@PSW.MM.AudioDriver.Codec.1263116, 2018/12/4, Remove for smart mic
 #/dev/ttyHS1               0660   system     system
 #else /* VENDOR_EDIT */
-/dev/ttyHS1               0660   root       audio
-/dev/adnc2                0660   root       audio
-/dev/adnc3                0660   root       audio
-/dev/adnc4                0660   root       audio
-/dev/adnc-cvq             0660   root       audio
+#/dev/ttyHS1               0660   root       audio
+#/dev/adnc2                0660   root       audio
+#/dev/adnc3                0660   root       audio
+#/dev/adnc4                0660   root       audio
+#/dev/adnc-cvq             0660   root       audio
 #endif /* VENDOR_EDIT */
 /dev/mdm                  0660   system     radio
 /sys/devices/virtual/smdpkt/smdcntl*       open_timeout   0664 radio radio
@@ -317,10 +314,7 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/assd                 0660    nfc         nfc
 /dev/p73                  0660    secure_element         secure_element
 /dev/pn544                0660    nfc         nfc
-#ifdef VENDOR_EDIT
-#wenjie.Liu@Connectivity.CN.NFC.BASIC.Hardware.1182186, 2018/02/13,
-/dev/cxd224x-i2c          0660    nfc         nfc
-#end VENDOR_EDIT
+
 # UIO devices
 /dev/uio0                 0660   system     system
 /dev/uio1                 0660   system     system
@@ -350,8 +344,6 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/block/platform/soc/c0c4000.sdhci/by-name/frp       0600   system     system
 /dev/block/platform/soc/1d84000.ufshc/by-name/frp       0600   system     system
 /dev/block/platform/soc/7c4000.sdhci/by-name/frp        0600   system     system
-/dev/block/platform/soc/4744000.sdhci/by-name/frp       0600   system     system
-/dev/block/platform/soc/4804000.ufshc/by-name/frp       0600   system     system
 
 # This is temporary while using SD card for initial bring-up
 /dev/block/platform/soc/8804000.sdhci/by-name/frp       0600   system     system
@@ -427,7 +419,3 @@ firmware_directories /vendor/firmware_mnt/image/
 /sys/class/graphics/fb0     dynamic_bitclk           0664    system  graphics
 
 /sys/devices/virtual/hdcp/msm_hdcp  min_level_change 0664    system  graphics
-
-#QG device
-/dev/qg               0660   system     system
-/dev/qg_battery       0660   system     system
